--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Ethan's Blog
 SEOTitle: 徐文彬的博客 | Ethan's Blog
 header-img: img/home-bg.jpg
 email: xuwenbin8709@gmail.com
-description: "Just Stories"
+description: "Hi there~"
 keyword: "徐文彬,Ethan,Blog"
 url: "https://blingblingwink.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
