--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Ethan's Blog
-#SEOTitle: 徐文彬的博客 | Ethan's Blog
+title: Ethan
+SEOTitle: Ethan's Blog
 header-img: img/home-bg.jpg
 email: xuwenbin8709@gmail.com
 description: "Hi there~"
